@@ -21,6 +21,10 @@ Changes
 Fixes
 =====
 
+ - Fixed an issue where the query circuit breaker would be tripped after 
+   running several queries due to incorrect memory tracking. Subsequent 
+   operations would've failed due to the lack of circuit breaker cleanup.
+
  - Improve shards view performance in the Admin UI
 
  - Remove horizontal scroll from the console editor in the Admin UI.
